// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Drawer /> should add custom classes 1`] = `
<Drawer
  animation={
    {
      "duration": null,
      "in": "",
      "out": "",
    }
  }
  className="custom-class-name"
  isOpen={true}
  onClose={[Function]}
  onDidClose={[Function]}
  onDidOpen={[Function]}
  onOpen={[Function]}
>
  <div
    aria-modal={true}
    className="custom-class-name tss-dxx72o-container tss-6tq3yk-animationIn common__drawer"
    onAnimationEnd={[Function]}
    role="dialog"
    style={{}}
    tabIndex={-1}
  />
</Drawer>
`;

exports[`<Drawer /> should execute callback when drawer close animation did end 1`] = `
<Drawer
  animation={
    {
      "duration": null,
      "in": "",
      "out": "",
    }
  }
  className="custom-class-name"
  isOpen={true}
  onClose={[MockFunction]}
  onDidClose={[MockFunction]}
  onDidOpen={[Function]}
  onOpen={[Function]}
>
  <div
    aria-modal={true}
    className="custom-class-name tss-dxx72o-container tss-6tq3yk-animationIn common__drawer"
    onAnimationEnd={[Function]}
    role="dialog"
    style={{}}
    tabIndex={-1}
  />
</Drawer>
`;

exports[`<Drawer /> should execute callback when drawer open animation did end 1`] = `
<Drawer
  animation={
    {
      "duration": null,
      "in": "",
      "out": "",
    }
  }
  className="custom-class-name"
  isOpen={false}
  onClose={[Function]}
  onDidClose={[Function]}
  onDidOpen={[MockFunction]}
  onOpen={[MockFunction]}
/>
`;

exports[`<Drawer /> should render 1`] = `""`;
